--- a/README.asciidoc
+++ b/README.asciidoc
@@ -8,7 +8,7 @@
 == 概要
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases/tag/v3.7.2%2B[安定版ダウンロードページ]
-* link:https://github.com/amoad/amoad-ios-sdk/releases/tag/v3.7.5[最新版ダウンロードページ]
+* link:https://github.com/amoad/amoad-ios-sdk/releases[最新版ダウンロードページ]
 * link:https://github.com/amoad/amoad-ios-sdk/releases[更新履歴]
 ** [NEW] renderAdの失敗Block（onFailure）を指定するメソッドを誤って削除したので、復活させました（詳しくはlink:Documents/Native/Guide_nativeApp.asciidoc#renderAd[こちら]を参照ください）。大変ご迷惑をおかけいたしました。
 ** ネイティブ広告デリゲートを追加しました（詳しくは、link:Documents/Native/Guide_nativeApp.asciidoc#-12[ネイティブ（App）] / link:Documents/Native/Guide_listView.asciidoc#-13[リストビュー]）。
