--- a/Documents/Install/Install.asciidoc
+++ b/Documents/Install/Install.asciidoc
@@ -39,7 +39,7 @@ iOS 6.x、7.x、8 〜 8.4
 
 . Project Navigatorを開き、Modulesフォルダ以下のファイルをすべてドラッグ＆ドロップします。libAMoAd.aは、TargetのLinked Frameworks and Librariesに自動的に追加されます。
 
-image:images/SDK01.png[
+image:Images/SDK01.png[
 "AMoAd SDKの追加", width=90%]
 
 TIP: 自動的に追加されなかった場合は＋ボタンから手動で追加してください。
@@ -58,7 +58,7 @@ NOTE: Framework化する予定です
 |StoreKit.framework |Required
 |===
 
-image:images/FW01.png[
+image:Images/FW01.png[
 "関連フレームワークの追加", width=90%]
 
 TIP: Xcode 4の場合は、Quartzcore.frameworkも追加する必要があります。
@@ -67,5 +67,5 @@ TIP: Xcode 4の場合は、Quartzcore.frameworkも追加する必要がありま
 
 . TargetのBuild Settingsタブを開き、LinkingカテゴリのOther Linker Flagsに「-ObjC」を設定する
 
-image:images/LN01.png[
+image:Images/LN01.png[
 "リンクオプションの追加", width=90%]
