--- a/Documents/UnityPlugin/Guide.asciidoc
+++ b/Documents/UnityPlugin/Guide.asciidoc
@@ -1,4 +1,4 @@
-:Version: 1.0.0
+:Version: 1.0.1
 :toc: macro
 :toc-title: 目次
 :toclevels: 4
@@ -13,7 +13,7 @@ toc::[]
 == 概要
 
 === はじめに
-AMoAd Unity Plugin（以下、プラグイン）を適用することで、UnityアプリにAMoAdネットワークのバナー広告を表示することが可能になります。
+AMoAd Unity Plugin（以下、プラグイン）を適用することで、UnityアプリにAMoAdネットワークの広告を表示することが可能になります。
 
 TIP: 広告の表示には別途、AMoAd SDKが必要です。
 
@@ -22,57 +22,21 @@ TIP: 広告の表示には別途、AMoAd SDKが必要です。
 [options="header"]
 |===
 |サービス |種類 |サイズ
-|バナー広告 |画像、HTML |320×50、320×100、300×250、728×90
-|ネイティブ広告 |未対応 | 未対応
+|link:Display.asciidoc[バナー広告] |画像、HTML |320×50、320×100、300×250、728×90
+|link:Interstitial.asciidoc[インタースティシャル（全画面）広告] |画像 |300x250
+|ネイティブ広告 |未対応 |未対応
 |===
 
 == パッケージのダウンロード
 こちらのURLより取得できます。
 
-link:https://github.com/amoad/amoad-ios-sdk/raw/master/UnityPlugin/AMoAdUnityPlugin.unitypackage[AMoAdUnityPlugin.unitypackage]
+link:https://github.com/amoad/amoad-ios-sdk/releases/latest[安定版ダウンロードページ] ::
+リリース時は、こちらの使用をお勧めします。
 
-== サンプルアプリケーションの使用方法
-=== AMoAdUnityPluginSample
+link:https://github.com/amoad/amoad-ios-sdk/releases#[最新版ダウンロードページ] ::
+開発中のベータ版、アルファ版などが含まれます。
 
-link:https://github.com/amoad/amoad-ios-sdk/blob/master/Samples/UnityPlugin[サンプルコード]
-
-.AMoAdUnityPluginSample.cs
-[source,csharp]
-----
-public class AMoAdUnityPluginSample : MonoBehaviour {
-
-  private static string SID = "管理画面から発行されるsidを設定してください";
-
-  static AMoAdUnityPluginSample () {
-    AMoAdUnityPlugin.Register (
-      sid:SID,
-      bannerSize:AMoAdUnityPlugin.BannerSize.B320x50,
-      hAlign:AMoAdUnityPlugin.HorizontalAlign.Center,
-      vAlign:AMoAdUnityPlugin.VerticalAlign.Bottom,
-      adjustMode:AMoAdUnityPlugin.AdjustMode.Responsive,
-      rotateTrans:AMoAdUnityPlugin.RotateTransition.FlipFromLeft,
-      clickTrans:AMoAdUnityPlugin.ClickTransition.Jump,
-      imageName:"b640_100.gif"
-      );
-  }
-
-  void Awake () {
-    AMoAdUnityPlugin.Show (SID);
-  }
-}
-----
-
-. AMoAdUnityPluginSample.csのSIDに管理画面から発行されるsidを入力してください +
-. Register()のパラメタ、bannerSizeに管理画面に指定した広告サイズを記入してください
-. その他、表示設定を変えたいときはRegister()メソッドのパラメタを変更してください
-. 本ドキュメントの以降の手順に従いプラグイン、SDKの導入を行ってください
-
-表示設定の詳細は<<AMoAdUnityPlugin_Register,こちら>>をご参照ください。
-
-TIP: iOSの場合、Bundle Identifierを指定してBuildしてください。
-
-image:images/U3_1_1_T.png[
-"Importing package", width=250]
+TIP: /UnityPlugin/AMoAdUnityPlugin.unitypackage
 
 == プラグインの適用手順
 以下の手順でプラグインをUnityアプリに適用します。
@@ -107,127 +71,6 @@ Android版プラグインブリッジの実装
 
 上記のファイルが揃っていれば、プラグインの適用は完了です。
 
-== 広告を表示するスクリプト
-
-=== スクリプトの流れ
-
-. 管理画面から発行されるsid、広告サイズ、表示位置などを指定してRegister()メソッドでプラグインを登録します。 +
-`AMoAdUnityPlugin.Register (sid, ...);`
-. Awake()、Start()など広告の表示を開始したいタイミングで、Show()メソッドを呼び出します。 +
-`AMoAdUnityPlugin.Show (sid);`
-. 広告を消したいタイミングで、Hide()メソッドを呼び出します。 +
-`AMoAdUnityPlugin.Hide (sid);`
-. メモリ使用量が気になるときはHide()の代わりに、Dispose()メソッドを呼び出してください（Show()で再表示できます）。 +
-`AMoAdUnityPlugin.Dispose (sid);`
-
-TIP: 広告の切り替え（ローテーション）は、管理画面で指定された秒数で行なわれます。プラグインで指定することはできません。
-
-=== スクリプト例
-
-.AMoAdUnityPluginSample.cs
-[source,csharp]
-----
-public class AMoAdUnityPluginSample : MonoBehaviour {
-
-  private static string SID = "管理画面から発行されるsidを設定してください";
-
-  static AMoAdUnityPluginSample () {
-    AMoAdUnityPlugin.Register (
-      sid:SID,
-      bannerSize:AMoAdUnityPlugin.BannerSize.B320x50,
-      hAlign:AMoAdUnityPlugin.HorizontalAlign.Center,
-      vAlign:AMoAdUnityPlugin.VerticalAlign.Bottom,
-      adjustMode:AMoAdUnityPlugin.AdjustMode.Responsive,
-      rotateTrans:AMoAdUnityPlugin.RotateTransition.FlipFromLeft,
-      clickTrans:AMoAdUnityPlugin.ClickTransition.Jump,
-      imageName:"b640_100.gif"
-      );
-  }
-
-  void Awake () {
-    AMoAdUnityPlugin.Show (SID);
-  }
-}
-----
-
-=== パラメタの説明
-==== AMoAdUnityPlugin.Register() [[AMoAdUnityPlugin_Register]]
-管理画面から発行されるsidに紐づく広告情報を登録します。
-[options="header"]
-|===
-|パラメタ名 |Type 2+|Value
-|sid |string 2+|管理画面から発行されるsidを設定してください
-.5+|bannerSize .5+|AMoAdUnityPlugin .BannerSize 2+|広告サイズ
-|B320x50 |320×50
-|B320x100 |320×100
-|B300x250 |300×250
-|B728x90 |728×90 (iPad用)
-.5+|hAlign .5+|AMoAdUnityPlugin .HorizontalAlign 2+|水平方向の表示位置
-|None |なし（x座標指定）
-|Left |左寄せ
-|Center |中央寄せ
-|Right |右寄せ
-.5+|vAlign .5+|AMoAdUnityPlugin .VerticalAlign 2+|垂直方向の表示位置
-|None |なし（y座標指定）
-|Left |上寄せ
-|Middle |中央寄せ
-|Right |下寄せ
-.3+|adjustMode .3+|AMoAdUnityPlugin .AdjustMode 2+|広告サイズの調整
-|Fixed |固定
-|Responsive |レスポンシブ（デフォルト）
-.6+|rotateTrans .6+|AMoAdUnityPlugin .RotateTransition 2+|広告ローテーション時のトランジションを設定する（iOS用）
-|None |トランジション「なし」（デフォルト）
-|CurlUp |トランジション「巻き上げ」
-|CurlDown |トランジション「巻き下げ」
-|FlipFromLeft |トランジション「左フリップ」
-|FlipFromRight |トランジション「右フリップ」
-.3+|clickTrans .3+|AMoAdUnityPlugin .ClickTransition 2+|広告クリック時のトランジションを設定する（iOS用）
-|None |トランジション「なし」（デフォルト）
-|Jump |トランジション「ジャンプ」
-|imageName |string 2+|初期表示画像ファイル名（Androidアプリを作成する場合は、アルファベットの小文字で始まる名前）
-|x |int 2+|x座標（hAlignがNoneのときのみ有効）
-|y |int 2+|y座標（vAlignがNoneのときのみ有効）
-.6+|androidRotateTrans .6+|AMoAdUnityPlugin .AndroidRotateTransition 2+|広告ローテーション時のトランジションを設定する（Android用）
-|None |トランジション「なし」（デフォルト）
-|Alpha |トランジション「透過」
-|Rotate |トランジション「回転」
-|Scale |トランジション「拡大」
-|Translate |トランジション「スライド・アップ」
-.3+|androidClickTrans .3+|AMoAdUnityPlugin .AndroidClickTransition 2+|広告クリック時のトランジションを設定する（Android用）
-|None |トランジション「なし」（デフォルト）
-|Jump |トランジション「ジャンプ」
-|===
-
-TIP: 広告サイズの調整にレスポンシブを選択すると、端末のサイズに合わせて広告が拡大縮小します。iPhone 5以前の横幅（320）を基準とします。
-
-TIP: rotateTransとclickTransに関して、Androidアプリをビルドする場合は、対応しているアニメーションが異なりますので、代わりにandroidRotateTrans、androidClickTransをご使用ください。
-
-==== AMoAdUnityPlugin.Show()
-sidを指定して広告の表示を行います。
-[options="header"]
-|===
-|パラメタ名 |Type 2+|Value
-|sid |string 2+|管理画面から発行されるsidを設定してください
-|===
-
-==== AMoAdUnityPlugin.Hide()
-sidを指定して広告を消します。
-[options="header"]
-|===
-|パラメタ名 |Type 2+|Value
-|sid |string 2+|管理画面から発行されるsidを設定してください
-|===
-
-==== AMoAdUnityPlugin.Dispose()
-メモリ容量が気になる場合、広告を消してViewのリソースを解放します。AMoAdUnityPlugin.Show()メソッドで再表示できます。
-[options="header"]
-|===
-|パラメタ名 |Type 2+|Value
-|sid |string 2+|管理画面から発行されるsidを設定してください
-|===
-
-TIP: AMoAdUnityPlugin.Show()メソッド呼び出し時、Viewがなければ作成します。同じsidの広告を同じ画面に複数、置くことはできません。
-
 == ビルド、環境設定
 
 === iOS
@@ -236,6 +79,11 @@ TIP: AMoAdUnityPlugin.Show()メソッド呼び出し時、Viewがなければ作
 
 image:images/U6_1_1.png[
 "iOS Unity Build", width=600]
+
+NOTE: Bundle Identifierを指定してください。
+
+image:images/U3_1_1_T.png[
+"Importing package", width=200px]
 
 ==== Xcode
 AMoAd SDKの導入につきまして、簡単に説明すると以下のとおりです。
