--- a/Documents/Display/Interstitial.asciidoc
+++ b/Documents/Display/Interstitial.asciidoc
@@ -5,9 +5,11 @@
 
 = インタースティシャル（全画面）広告ガイド AMoAd SDK {version} Guide for iOS
 
-NOTE: インタースティシャル（全画面）広告の概要については、link:../Interstitial/Guide.asciidoc[こちら]をご参照ください。
+NOTE: インタースティシャル広告の概要については、link:../Interstitial/Guide.asciidoc[こちら]をご参照ください。
 
 NOTE: SDKのインストールについてはlink:../Install/Install.asciidoc[こちら]をご参照ください。
+
+NOTE: サンプルコードが/Samples/DisplayInterstitial/にありますので、管理画面から取得したsidを入力して動かしてください。
 
 toc::[]
 
