--- a/Documents/Display/Interstitial.asciidoc
+++ b/Documents/Display/Interstitial.asciidoc
@@ -7,7 +7,9 @@
 
 NOTE: インタースティシャル広告の概要については、link:../Interstitial/Guide.asciidoc[こちら]をご参照ください。
 
-NOTE: SDKのインストールについてはこちら（link:../Install/Install.asciidoc[iOS版]/link:https://github.com/amoad/amoad-android-sdk/blob/master/Documents/Setup.asciidoc[Android版]）をご参照ください。
+NOTE: SDKのインストールについてはlink:../Install/Install.asciidoc[こちら]をご参照ください。
+
+NOTE: モジュールのダウンロードはこちら（link:https://github.com/amoad/amoad-ios-sdk/releases/latest[安定版]/link:https://github.com/amoad/amoad-ios-sdk/releases#[最新版]）からお願いします。
 
 NOTE: サンプルコードが/Samples/DisplayInterstitial/にありますので、管理画面から取得したsidを入力して動かしてください。
 
