Document_unity_new_version

--- a/Documents/UnityPlugin/Guide.asciidoc
+++ b/Documents/UnityPlugin/Guide.asciidoc
@@ -27,6 +27,15 @@ TIP: 広告の表示には別途、AMoAd SDKが必要です。
 |ネイティブ広告 |未対応 |未対応
 |===
 
+== 対応環境
+
+=== Unityのバージョン
+
+最新バージョンの対応状況は下記の通りです。
+
+- Unity 4系 :  Version 4.6.9
+- Unity 5系 :  Version 5.2.2
+
 == パッケージのダウンロード
 こちらのURLより取得できます。
 
