--- a/Documents/Display/Guide.asciidoc
+++ b/Documents/Display/Guide.asciidoc
@@ -333,3 +333,9 @@ override func viewDidLoad() {
 ----
 
 TIP: 各画面で同じ固有IDの広告を生成して追加することで広告情報が共有されます。
+
+== その他の実装について
+
+=== ログ・トレースの出力方法
+
+link:../Common/Logger.md[ロギング・トレース機能]
