--- a/Documents/Display/Interstitial.asciidoc
+++ b/Documents/Display/Interstitial.asciidoc
@@ -155,3 +155,9 @@ AMoAdInterstitial
 |===
 
 TIP: リンクボタン、閉じるボタンが押された時は自動的に閉じるので、このメソッドを呼び出す必要はありません。
+
+== その他の実装について
+
+=== ログ・トレースの出力方法
+
+link:../Common/Logger.md[ロギング・トレース機能]
